// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux Reports Module Initial reducer state 1`] = `
Object {
  "list": Object {},
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Redux Snapshot Thunk Actions simple report actions full test 1`] = `
Object {
  "payload": Object {
    "mockCreateReportName": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName",
      "status": "draft",
      "userPosition": "1,2",
    },
  },
  "type": "report/CREATE_REPORT",
}
`;

exports[`Redux Reports Module Redux Snapshot Thunk Actions simple report actions full test 2`] = `
Object {
  "list": Object {
    "mockCreateReportName": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName",
      "status": "draft",
      "userPosition": "1,2",
    },
  },
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Redux Snapshot Thunk Actions simple report actions full test 3`] = `
Object {
  "payload": Object {
    "mockCreateReportName2": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName2",
      "status": "draft",
      "userPosition": "1,2",
    },
  },
  "type": "report/CREATE_REPORT",
}
`;

exports[`Redux Reports Module Redux Snapshot Thunk Actions simple report actions full test 4`] = `
Object {
  "list": Object {
    "mockCreateReportName": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName",
      "status": "draft",
      "userPosition": "1,2",
    },
    "mockCreateReportName2": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName2",
      "status": "draft",
      "userPosition": "1,2",
    },
  },
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Redux Snapshot Thunk Actions simple report actions full test 5`] = `
Object {
  "payload": Object {
    "data": Object {
      "status": "complete",
    },
    "name": "mockCreateReportName2",
  },
  "type": "report/UPDATE_REPORT",
}
`;

exports[`Redux Reports Module Redux Snapshot Thunk Actions simple report actions full test 6`] = `
Object {
  "list": Object {
    "mockCreateReportName": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName",
      "status": "draft",
      "userPosition": "1,2",
    },
    "mockCreateReportName2": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName2",
      "status": "complete",
      "userPosition": "1,2",
    },
  },
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Redux Snapshot Thunk Actions simple report actions full test 7`] = `
Object {
  "payload": Object {
    "reportName": "mockCreateReportName",
  },
  "type": "report/DELETE_REPORT",
}
`;

exports[`Redux Reports Module Redux Snapshot Thunk Actions simple report actions full test 8`] = `
Object {
  "list": Object {
    "mockCreateReportName2": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName2",
      "status": "complete",
      "userPosition": "1,2",
    },
  },
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Redux Snapshot Thunk Actions syncReports 1`] = `
Array [
  Object {
    "meta": Object {
      "offline": Object {
        "commit": Object {
          "type": "report/GET_DEFAULT_TEMPLATE_COMMIT",
        },
        "effect": Object {
          "url": "<API_URL_MOCK>/reports/default",
        },
        "rollback": Object {
          "type": "report/GET_DEFAULT_TEMPLATE_ROLLBACK",
        },
      },
    },
    "type": "report/GET_DEFAULT_TEMPLATE_REQUEST",
  },
]
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test createReport 1`] = `
Object {
  "payload": Object {
    "mockCreateReportName": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName",
      "status": "draft",
      "userPosition": "1,2",
    },
  },
  "type": "report/CREATE_REPORT",
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test createReport 2`] = `
Object {
  "list": Object {
    "mockCreateReportName": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockCreateReportName",
      "status": "draft",
      "userPosition": "1,2",
    },
  },
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test deleteReport 1`] = `
Object {
  "payload": Object {
    "reportName": "mockReportName",
  },
  "type": "report/DELETE_REPORT",
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test deleteReport 2`] = `
Object {
  "list": Object {},
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test getDefaultReport 1`] = `
Object {
  "meta": Object {
    "offline": Object {
      "commit": Object {
        "type": "report/GET_DEFAULT_TEMPLATE_COMMIT",
      },
      "effect": Object {
        "url": "<API_URL_MOCK>/reports/default",
      },
      "rollback": Object {
        "type": "report/GET_DEFAULT_TEMPLATE_ROLLBACK",
      },
    },
  },
  "type": "report/GET_DEFAULT_TEMPLATE_REQUEST",
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test getDefaultReport 2`] = `
Object {
  "list": Object {},
  "synced": false,
  "syncing": true,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test saveReport 1`] = `
Object {
  "payload": Object {
    "data": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": "mockDateString",
      "index": 1,
      "name": "reportNameMock",
      "status": "draft",
      "userPosition": "1,2",
    },
    "name": "reportNameMock",
  },
  "type": "report/UPDATE_REPORT",
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test saveReport 2`] = `
Object {
  "list": Object {
    "reportNameMock": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": "mockDateString",
      "index": 1,
      "name": "reportNameMock",
      "status": "draft",
      "userPosition": "1,2",
    },
  },
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test saveReport with answers 1`] = `
Object {
  "payload": Object {
    "data": Object {
      "answers": Array [
        Object {
          "child": Object {
            "questionName": "mockQuestionName2",
            "value": "Value2",
          },
          "questionName": "mockQuestionName1",
          "value": "Value1",
        },
      ],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": "mockDateString",
      "index": 1,
      "name": "reportNameMock",
      "status": "draft",
      "userPosition": "1,2",
    },
    "name": "reportNameMock",
  },
  "type": "report/UPDATE_REPORT",
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test saveReport with answers 2`] = `
Object {
  "list": Object {
    "reportNameMock": Object {
      "answers": Array [
        Object {
          "child": Object {
            "questionName": "mockQuestionName2",
            "value": "Value2",
          },
          "questionName": "mockQuestionName1",
          "value": "Value1",
        },
      ],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": "mockDateString",
      "index": 1,
      "name": "reportNameMock",
      "status": "draft",
      "userPosition": "1,2",
    },
  },
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test setReportAnswer 1`] = `
Object {
  "payload": Object {
    "answer": Object {
      "child": Object {
        "questionName": "mockQuestionName2",
        "value": "Value2",
      },
      "questionName": "mockQuestionName1",
      "value": "Value1",
    },
    "reportName": "mockReportName",
    "updateOnly": true,
  },
  "type": "report/SET_REPORT_ANSWER",
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test setReportAnswer 2`] = `Object {}`;
